src/tests/function-declarations/8.txt
function-declarations/8.c:0:1: error: no main function defined
 
 ^
function-declarations/8.c:1:10: error: parameter name omitted
 int sum (int, int) {
          ^
function-declarations/8.c:1:15: error: parameter name omitted
 int sum (int, int) {
               ^
